--- a/index.html
+++ b/index.html
@@ -14,17 +14,24 @@
   <h2>тогда листай вниз...</h2><img src="http://argotechs.com/images/fiverr/arrow_right.png" class="img2"/>
 </div>
 <div class="slide2 slide">
-  <h1>2</h1>
-  <p>описание</p>
+  <h1>Гуава (Фаранг)</h1>
+  <p>Круглый зеленый плод размером с большое яблоко. Можно есть с кожицей и мелкими семечками. Несколько твердовата, поэтому желательно порезать на ломтики. На вкус не очень сладкая. В Таиланде потребляется недозревшим (когда мякоть фрукта еще зеленая и более твердая) с солью, сахаром и специями.</p>
+  <img src='bags/1.png' />
 </div>
 <div class="slide3 slide">
-  <h1>3</h1>
+  <h1>Помело (Сом-о) </h1>
+  <p>Самая близкая аналогия- это апельсин и грейпфрут, только больше, сочнее и слаще. Обладает толстой кожей, которую надо чистить. Некоторые сорта имеют много косточек, некоторые мало, но все сорта вкусные и сочные.</p>
+  <img src='bags/17.png' />
 </div>
 <div class="slide4 slide">
-  <h1>4</h1>
+  <h1>Саподилла (Ламут) </h1>
+  <p>Коричневые с золотистым оттенком плоды, похожие на киви, с такой же тонкой кожурой, которую можно снять ножом. Мякоть сладкая, напоминает вкус компота из сухофруктов, сушеную грушу или хурму. Внутри есть несколько косточек. Незрелые плоды имеют вяжущий вкус, перед покупкой проверьте на мягкость. Часто используется для сервировки блюд из-за красивого коричневатого оттенка мякоти.</p>
+  <img src='bags/4.png' />
 </div>
 <div class="slide5 slide">
-  <h1>5</h1>
+  <h1>Мангостин (Монгкут) </h1>
+  <p>Этот очень популярный и излюбленный фрукт не только местных жителей, но и многочисленных туристов, называют «Королевой фруктов». Коричнево-сиреневые плоды, размером с мандарин. Надрежьте толстую кожуру ножом и очистите руками. Внутри белая мякоть с дольками, как у мандарина. В некоторых дольках может быть косточка. И еще правило мангостина: чем больше долек в плоде, тем меньше в нем семечек. Кисло-сладкий вкус. </p>
+  <img src='bags/5.png' />
 </div>
 <div class="controls">
   <div class="left"></div>
