--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 
 <div class="slide1 slide">
-  <h1>Сумку хочешь?</h1>
-  <h2>тогда листай вниз...</h2><img src="http://argotechs.com/images/fiverr/arrow_right.png" class="img2"/>
+  <h1>Не можете найти удобную сумку?</h1>
+  <h2>Винтажные сумки с характером... handmade</h2><img src="http://argotechs.com/images/fiverr/arrow_right.png" class="img2"/>
 </div>
 <div class="slide2 slide">
   <h1>Гуава (Фаранг)</h1>
