--- a/index.html
+++ b/index.html
@@ -33,10 +33,28 @@
   <p>Этот очень популярный и излюбленный фрукт не только местных жителей, но и многочисленных туристов, называют «Королевой фруктов». Коричнево-сиреневые плоды, размером с мандарин. Надрежьте толстую кожуру ножом и очистите руками. Внутри белая мякоть с дольками, как у мандарина. В некоторых дольках может быть косточка. И еще правило мангостина: чем больше долек в плоде, тем меньше в нем семечек. Кисло-сладкий вкус. </p>
   <img src='bags/5.png' />
 </div>
+
 <div class="controls">
   <div class="left"></div>
   <div class="right"></div>
 </div>
+<div class="zak">
+  <div class="fn">
+    <h2>заказ №384</h2>
+    <hr/>
+    <p class="del">17.200руб</p>
+    <p class="red">10.790руб</p>
+    <p class="bold">в наличии</p>
+    <p>габариты: 42x30x60</p>
+    <p class="small red">* доставка по Москве и мос. области БЕСПЛАТНА в день заказа</p>
+    <p class="small">* по всем вопросам телефон горячей линии: 8 985 453 43 56</p>
+    <hr/>
+    <input placeholder="Василий"/><br/>
+    <input placeholder="+7 985 476 76 34"/><br/><br/><br/><a href="thanks.html">заказать</a>
+  </div>
+  <div class="img"></div>
+</div>
+
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js'></script>
