--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <p class="small">* по всем вопросам телефон горячей линии: 8 985 453 43 56</p>
     <hr/>
     <input id='name' placeholder="Василий"/><br/>
-    <input id='phone' placeholder="+7 985 476 76 34"/><br/><br/><br/><a href="thanks.html" id='fire'>заказать</a>
+    <input id='phone' placeholder="+7 985 476 76 34"/><br/><br/><br/><a href="#" id='fire'>заказать</a>
   </div>
   <div class="img"></div>
 </div>
